<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".fragments.MainFragment">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:src="@drawable/pokeball"/>

    <Button
        android:id="@+id/btn_main_fragment_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/btn_main_search_a_pokemon"/>

    <Button
        android:id="@+id/btn_main_fragment_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/btn_main_favorites_pokemon"/>

    <Button
        android:id="@+id/btn_main_fragment_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/btn_main_my_pokemon_team"/>

</LinearLayout>