<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PokeDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layout_detail_fragment_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_detail_fragment_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp" />

            <Button
                android:id="@+id/btn_detail_fragment_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_detail_fragment_search"
                android:layout_marginHorizontal="16dp"
                android:layout_centerHorizontal="true"
                android:text="@string/btn_search_a_pokemon"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/img_detail_fragment_poke_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="center"/>

        <RelativeLayout
            android:id="@+id/layout_detail_fragment_name_and_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_detail_fragment_pokemon_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="Pikachu"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_fragment_detail_poke_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/tv_detail_fragment_pokemon_name"
                android:text="Pokedex : 25"/>



            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_detail_fragment_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_baseline_favorite_border_24"
                android:contentDescription="fav_btn" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_detail_fragment_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/btn_detail_fragment_favorite"
                android:src="@drawable/ic_baseline_add_24"
                android:contentDescription="fav_btn" />

        </RelativeLayout>



        <LinearLayout
            android:id="@+id/layout_detail_fragment_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_detail_fragment_type_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/detail_type_title"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_detail_fragment_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginBottom="8dp"
                android:text=" - Electric \n - Water"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_detail_fragment_stats"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_detail_fragment_stat_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/detail_stats_title"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="32dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/tv_fragment_detail_hp"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/stat_hp"/>

                <ProgressBar
                    android:id="@+id/progress_fragment_detail_hp"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:progress="10" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="32dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/tv_fragment_detail_att"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/stat_attack"/>

                <ProgressBar
                    android:id="@+id/progress_fragment_detail_att"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:progress="10" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="32dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/tv_fragment_detail_def"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/stat_def"/>

                <ProgressBar
                    android:id="@+id/progress_fragment_detail_def"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:progress="10" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="32dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/tv_fragment_detail_att_spe"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/stat_att_spe"/>

                <ProgressBar
                    android:id="@+id/progress_fragment_detail_att_spe"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:progress="10" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="32dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/tv_fragment_detail_def_spe"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/stat_def_spe"/>

                <ProgressBar
                    android:id="@+id/progress_fragment_detail_def_spe"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:progress="10" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="32dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/tv_fragment_detail_speed"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/stat_speed"/>

                <ProgressBar
                    android:id="@+id/progress_fragment_detail_speed"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:progress="10" />



            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</ScrollView>